	syntax = "proto3";

	option csharp_namespace = "Randevucum.Authentication.Orchestrator.Domain";

	package authentication;

	// Authentication service definition
	service AuthService {
	  rpc GoogleLogin (GoogleLoginRequest) returns (AuthResponse);
	  rpc EmailLogin (EmailLoginRequest) returns (AuthResponse);
	  rpc RefreshToken (RefreshTokenRequest) returns (AuthResponse);
	  rpc GetUser (GetUserRequest) returns (GetUserResponse);
	  rpc GetUserById (GetUserByIdRequest) returns (GetUserResponse);
	  rpc Logout (LogoutRequest) returns (LogoutResponse);
	  rpc Register (RegisterRequest) returns (RegisterResponse);
	  rpc UpdateUser (UpdateUserRequest) returns (UpdateUserResponse);
	  rpc DeleteUser (DeleteUserRequest) returns (DeleteUserResponse);
	  rpc ValidateToken (ValidateTokenRequest) returns (ValidateTokenResponse);
	  rpc ChangePassword (ChangePasswordRequest) returns (ChangePasswordResponse);
	  rpc ForgotPassword (ForgotPasswordRequest) returns (ForgotPasswordResponse);
	  rpc ResetPassword (ResetPasswordRequest) returns (ResetPasswordResponse);
	  rpc SendVerificationEmail (SendVerificationEmailRequest) returns (SendEmailResponse);
	  rpc SendForgotPasswordEmail (SendForgotPasswordEmailRequest) returns (SendEmailResponse);
	  rpc RoleCheck (RoleCheckRequest) returns (RoleCheckResponse);
	  rpc VerifyEmailWithOneTimeCode (VerifyEmailWithOneTimeCodeRequest) returns (VerifyEmailResponse);
	  rpc VerifyEmailWithCode (VerifyEmailWithCodeRequest) returns (VerifyEmailResponse);
	}

	// -------------Requests-------------

	message GoogleLoginRequest {
	  string authentication_code = 1;
	}

	message EmailLoginRequest {
	  string email = 1;
	  string password = 2;
	}

	message RefreshTokenRequest {
	  string refresh_token = 1;
	}

	message GetUserRequest {
	  string token = 1;
	}

	message GetUserByIdRequest {
	  string user_id = 1;
	}

	message LogoutRequest {
	  string token = 1;
	}

	message RegisterRequest {
	  string email = 1;
	  string password = 2;
	  string username = 3;
	  string role = 4;
	}

	message UpdateUserRequest {
	  string token = 1;
	  string username = 2;
	  string email = 3;
	  string role = 4;
	}

	message DeleteUserRequest {
	  string token = 1;
	}

	message ValidateTokenRequest {
	  string token = 1;
	}

	message ChangePasswordRequest {
	  string token = 1;
	  string current_password = 2;
	  string new_password = 3;
	}

	message ForgotPasswordRequest {
	  string email = 1;
	}

	message ResetPasswordRequest {
	  string reset_token = 1;
	  string new_password = 2;
	}

	message SendVerificationEmailRequest {
	  string email = 1;
	}

	message SendForgotPasswordEmailRequest {
	  string email = 1;
	}

	message RoleCheckRequest {
	  string token = 1;
	  string role = 2;
	}

	message VerifyEmailWithOneTimeCodeRequest {
	  string code = 1;
	  string verification_code = 2;
	}

	message VerifyEmailWithCodeRequest {
	  string code = 1;
	  string verification_code = 2;
	}

	// -------------Common-------------

	message OperationResult {
	  bool success = 1;
	  string message = 2;
	  int32 status_code = 3;
	}

	// -------------Responses-------------

	message AuthResponse {
	  OperationResult operation_result = 1;
	  string access_token = 2;
	  string refresh_token = 3;
	}

	message GetUserResponse {
	  OperationResult operation_result = 1;
	  string user_id = 2;
	  string username = 3;
	  string email = 4;
	  string role = 5;
	}

	message LogoutResponse {
	  OperationResult operation_result = 1;
	}

	message RegisterResponse {
	  OperationResult operation_result = 1;
	  string user_id = 2;
	  string username = 3;
	  string email = 4;
	}

	message UpdateUserResponse {
	  OperationResult operation_result = 1;
	}

	message DeleteUserResponse {
	  OperationResult operation_result = 1;
	}

	message ValidateTokenResponse {
	  OperationResult operation_result = 1;
	  string user_id = 2;
	}

	message ChangePasswordResponse {
	  OperationResult operation_result = 1;
	}

	message ForgotPasswordResponse {
	  OperationResult operation_result = 1;
	}

	message ResetPasswordResponse {
	  OperationResult operation_result = 1;
	}

	message SendEmailResponse {
	  OperationResult operation_result = 1;
	}

	message RoleCheckResponse {
	  OperationResult operation_result = 1;
	}

	message VerifyEmailResponse {
	  OperationResult operation_result = 1;
	  AuthResponse auth_response = 2; 
	}